# executorch_flutter

./: .gitignore  .pubignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  MODEL_EXPORT_GUIDE.md  PIGEON_MACOS_NOTES.md  README.md  ROADMAP.md  analysis_options.yaml  ffigen.yaml  pubspec.yaml
.github/workflows/: build.yml  publish.yml  release.yml
.specify/memory/: constitution.md
android/: build.gradle  proguard-rules.pro  settings.gradle
android/src/main/: AndroidManifest.xml
darwin/Sources/executorch_flutter/: ExecutorchFlutterPlugin.swift  ExecutorchModelManager.swift  ExecutorchTensorUtils.swift
darwin/Sources/executorch_flutter/include/: error_codes.h  executorch_flutter_wrapper.h  module.modulemap
docs/: build_system.md
example/: .gitignore  CLAUDE.md  GPU_PREPROCESSING.md  MODEL_EXPORT_GUIDE.md  README.md  pubspec.yaml
example/android/app/: build.gradle.kts
example/assets/: model_test_results.json
example/assets/images/: README.md
example/assets/models/: LICENSE  README.md
example/integration_test/: README.md  models_integration_test.dart  plugin_integration_test.dart
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/ios/RunnerTests/: RunnerTests.swift
example/lib/: main.dart
example/lib/controllers/: camera_controller.dart  opencv_camera_controller.dart  platform_camera_controller.dart
example/lib/models/: classification_model_settings.dart  gemma_model_definition.dart  gemma_model_settings.dart  mobilenet_model_definition.dart  model_definition.dart  model_input.dart  model_registry.dart  model_settings.dart  text_generation_result.dart  yolo_model_definition.dart  yolo_model_settings.dart
example/lib/processors/: audio_processor.dart  base_processor.dart  camera_image_converter.dart  gemma_input_processor.dart  gemma_output_processor.dart  image_processor.dart  mobilenet_input_processor.dart  mobilenet_output_processor.dart  object_detection_processor.dart  opencv_processors.dart  processors.dart  text_processor.dart  yolo_input_processor.dart  yolo_output_processor.dart  yolo_processor.dart
example/lib/processors/opencv/: opencv_yolo_preprocessor.dart  (+1 more)
example/lib/renderers/: detection_box_painter.dart  image_with_detections.dart
example/lib/screens/: camera_demo.dart  enhanced_audio_demo.dart  enhanced_image_demo.dart  enhanced_text_demo.dart  model_playground.dart  unified_model_playground.dart
example/lib/services/: model_controller.dart  performance_service.dart  processor_preferences.dart  service_locator.dart
example/lib/ui/: camera_view.dart  camera_view_singleton.dart
example/lib/utils/: test_images.dart
example/lib/widgets/: camera_stream_processor.dart  image_input_widget.dart  opencv_camera_stream_processor.dart  performance_monitor.dart
example/macos/Flutter/: GeneratedPluginRegistrant.swift
example/macos/Runner.xcodeproj/: project.pbxproj
example/python/: BACKENDS.md  README.md  executorch_exporter.py  main.py  validate_all_models.py
example/scripts/: run_integration_tests.sh
example/shaders/: mobilenet_preprocess.frag  yolo_preprocess.frag
example/test/: widget_test.dart
integration_test/: basic_model_loading_test.dart  concurrent_models_test.dart  error_handling_test.dart  example_integration_test.dart  inference_execution_test.dart  processor_pipeline_test.dart
ios/: executorch_flutter.podspec  executorch_flutter.podspec.backup
ios/Classes/: ExecutorchFlutterPlugin.swift  ExecutorchLifecycleManager.swift
ios/executorch_flutter/: Package.swift
lib/: executorch_flutter.dart  executorch_flutter_method_channel.dart  executorch_flutter_platform_interface.dart
lib/src/: executorch_errors.dart  executorch_inference.dart  executorch_model.dart  executorch_types.dart
lib/src/ffi/: error_conversion.dart  executorch_ffi_bridge.dart  tensor_conversion.dart
lib/src/processors/: audio_processor.dart  base_processor.dart  image_processor.dart  processors.dart  text_processor.dart
macos/Classes/: ExecutorchLifecycleManager.swift  ExecutorchModelManager.swift  ExecutorchTensorUtils.swift
macos/executorch_flutter/: Package.swift
macos/executorch_flutter/Sources/: executorch_flutter
pigeons/: executorch_api.dart
python/: EXPORT_SCRIPTS_SUMMARY.md  README.md  VALIDATION_SUMMARY.md  executorch_exporter.py  export_examples.py.bak  export_models.py  export_unified.py  export_yolo.py  export_yolo_fixed.py  export_yolo_models.sh  export_yolo_official.py  generate_test_models.py  generate_test_models.py.bak  main.py  setup_models.py  test_model_outputs.py  validate_all_models.py  verify_model.py
scripts/: generate_pigeon.sh
specs/001-we-are-building/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-we-are-building/contracts/: executorch_api.dart
specs/002-have-a-processers/: data-model.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-have-a-processers/contracts/: imagenet_processor.dart  processor_interfaces.dart
specs/003-and-add-another/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-and-add-another/contracts/: camera_processor.dart
specs/004-improve-the-ui/: plan.md  research.md  spec.md  tasks.md
specs/005-https-docs-pytorch/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/005-https-docs-pytorch/contracts/: platform-api.md
src/: CMakeLists.txt
src/build_config/: executorch_fetch.cmake  executorch_options.cmake
src/c_wrapper/: CMakeLists.txt  error_codes.c  error_codes.h  error_mapping.c  error_mapping.h  executorch_flutter_wrapper.c  executorch_flutter_wrapper.cpp  executorch_flutter_wrapper.h  tensor_utils.c  tensor_utils.h
src/c_wrapper/platform/: platform_android.c  platform_ios.c  platform_macos.c  platform_utils.h
test/: executorch_flutter_method_channel_test.dart  executorch_flutter_test.dart  imagenet_processor_test.dart  inference_request_test.dart  inference_result_test.dart  model_metadata_test.dart  pigeon_contract_test.dart  processor_interfaces_test.dart  tensor_data_test.dart  tensor_utils_test.dart
(+29 files in other folders)
